# sql-web

./: Cargo.toml  README.md  Rocket.toml
src/: config.rs  main.rs  models.rs  template.rs
src/routes/: columns.rs  index.rs  indexes.rs  mod.rs  query.rs  tables.rs
templates/: add_column.html  add_index.html  base.html  base.html.backup  drop_column.html  drop_index.html  index.html  login.html  query.html  rename_column.html  table_content.html  table_export.html  table_import.html  table_insert.html  table_list.html  table_query.html  table_structure.html  table_update.html
