[package]
name = "sql-web"
version = "0.1.0"
authors = ["YinMo19 <me@YinMo19.top>"]
edition = "2024"
description = "A web-based database browser for SQLite, MySQL, and PostgreSQL written in Rust using Rocket and SQLx."
homepage = "https://github.com/YinMo19/sql-web"
documentation = "https://docs.rs/sql-web"
repository = "https://github.com/YinMo19/sql-web"
license = "MIT"
readme = "README.md"
keywords = ["sql", "mysql", "sqlite", "pgsql", "rocket"]

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
askama = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.0"
csv = "1.3"
base64 = "0.21"
mime = "0.3"
regex = "1.0"
log = "0.4"
futures = "0.3"

[dependencies.rocket_db_pools]
version = "0.1"
features = ["sqlx_sqlite", "sqlx_mysql", "sqlx_postgres"]
